<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.kernel</groupId>
		<artifactId>kernel-parent</artifactId>
		<version>1.2.0-SNAPSHOT</version>
	</parent>
	<artifactId>kernel-keymanager-softhsm</artifactId>
	<version>1.0.7</version>
	<packaging>jar</packaging>
	<name>kernel-keymanager-softhsm</name>
	<properties>
		<kernel.core.version>1.2.0-SNAPSHOT</kernel.core.version>
		<kernel.logger.logback.version>1.0.6</kernel.logger.logback.version>
		<kernel.keygenerator.bouncycastle.version>1.0.6</kernel.keygenerator.bouncycastle.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-core</artifactId>
			<version>${kernel.core.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-keygenerator-bouncycastle</artifactId>
			<version>${kernel.keygenerator.bouncycastle.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-logger-logback</artifactId>
			<version>${kernel.logger.logback.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
		<dependency>
		    <groupId>org.bouncycastle</groupId>
		    <artifactId>bcprov-jdk15on</artifactId>
		    <version>1.66</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
		<dependency>
		    <groupId>org.bouncycastle</groupId>
		    <artifactId>bcpkix-jdk15on</artifactId>
		    <version>1.66</version>
		</dependency>		
		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk15 -->
		<dependency>
		    <groupId>org.bouncycastle</groupId>
		    <artifactId>bcmail-jdk15</artifactId>
		    <version>1.46</version>
		</dependency>				
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>bootstrap.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
                    <maven.compiler.source>11</maven.compiler.source>
                    <maven.compiler.target>11</maven.compiler.target>           
                    <compilerArgs>
                    	<arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
                    </compilerArgs>         
                </configuration>
			</plugin>
			<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-javadoc-plugin</artifactId>
		    <executions>
		        <execution>
		            <id>attach-javadocs</id>
		            <goals>
		            <goal>jar</goal>
		            </goals>
		            <configuration>
		                    <properties>
		                    <maven.javadoc.skip>true</maven.javadoc.skip>
		                    </properties>
		            </configuration>
		        </execution>
    		</executions>
		</plugin>
		</plugins>
	</build>
</project>
